--- a/index.html
+++ b/index.html
@@ -8,7 +8,25 @@
   <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-  <h1>page1</h1>
-  <a href="ready.html">to ready</a>
+  <div class="background">
+    <img src="img/background.jpg" alt="background">
+    <div class="whiteB"></div>
+  </div>
+
+  <div class="title">
+    <img src="img/title.png" alt="title">
+  </div>
+
+  <div class="menu">
+    <div class="sub">
+      <a href="ready.html">준비하기</a>      
+    </div>
+    <div class="sub">
+      <a href="delivery.html">전달하기</a>
+    </div>
+    <div class="sub">
+      <a href="farewell.html">이별하기</a>
+    </div>
+  </div>
 </body>
 </html>
