--- a/ready.html
+++ b/ready.html
@@ -5,8 +5,24 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ready</title>
+  <link rel="stylesheet" href="css/ready.css">
 </head>
 <body>
-  <h1>ready</h1>
+  <div class="background">
+    <img src="img/camo.png" alt="background">
+    <div class="whiteB"></div>
+  </div>
+  <div class="title">
+    <img src="img/title.png" alt="title">
+  </div>
+  <div class="menu">
+    <a href="#">0.인트로</a>
+    <a href="#">1.준비하기</a>
+    <a href="#">2.마음담기</a>
+    <a href="#">3.전달하러 가기</a>
+  </div>
+  <footer>
+    <a href="https://www.instagram.com/kyokikill/">sincere thanks to<br> 쿄키(@kyokill)</a>
+  </footer>
 </body>
 </html>
