--- a/ready.html
+++ b/ready.html
@@ -16,10 +16,10 @@
     <img src="img/title.png" alt="title">
   </div>
   <div class="menu">
-    <a href="#">0.인트로</a>
-    <a href="#">1.준비하기</a>
-    <a href="#">2.마음담기</a>
-    <a href="#">3.전달하러 가기</a>
+    <a href="intro.html">0.인트로</a>
+    <a href="ready_items.html">1.준비하기</a>
+    <a href="heartful.html">2.마음담기</a>
+    <a href="delivery.html">3.전달하러 가기</a>
   </div>
   <footer>
     <a href="https://www.instagram.com/kyokikill/">sincere thanks to<br> 쿄키(@kyokill)</a>
