--- a/ready_items.html
+++ b/ready_items.html
@@ -8,22 +8,72 @@
     <link rel="stylesheet" href="css/items.css">
 </head>
 <body>
-    <div class="title">
-        <p>준비물들</p>
+    <div class="background">
+        <img src="img/camo.png" alt="background">
+        <div class="whiteB"></div>
     </div>
-    <div class="menu__container">
-        <a href="menu/ballon.html" class="menu">
-            <img src="img/ballon.png" alt="#">
-            <p>이벤트용 풍선(소)</p>
-        </a>
-        <a href="" class="menu">
-            <img src="img/ballon.png" alt="#">
-            <p>분위기용 bgm</p>
-        </a>
-        <a href="" class="menu">
-            <img src="img/ballon.png" alt="#">
-            <p>편지</p>
-        </a>
+    <div class="title">
+        <p>준비하기</p>
+    </div>
+    <div class="container">
+        <div class="menu__container">
+            <div class="menu">
+                <div class="img__container">
+                    <div class="rub__img"></div>
+                </div>
+                <div class="menu__warpper">
+                    <p>0.편지지를 준비합니다(항상 왼쪽 가슴에 지니고 다니셨다면 효과가
+                        더 좋습니다). 지미 헨드릭슨이 말했듯이 심장에 가까운 왼손으로
+                        들어 왼쪽 가슴 심장 가까이 비벼주십시오. 최대한 느끼면서 비비셔야
+                        합니다.
+                    </p>
+                </div>
+            </div>
+            <div class="menu">
+                <div class="img__container">
+                    <div class="bite__img"></div>
+                </div>
+                <div class="menu__warpper">
+                    <p>1.혈서를 작성하기 위해 손가락을 있는 힘껏 물어주시기 바랍니다.
+                        21세기에 무슨 혈서냐 하실 수 있지만, 바로 2020년에 이은재 의원이
+                        혈서를 작성해 결의표명한 것과 같이, 혈서는 아직도 유효한 수단입니다.
+                    </p>
+                </div>
+            </div>
+            <div class="menu">
+                <div class="img__container">
+                    <div class="pobidon__img"></div>
+                </div>
+                <div class="menu__warpper">
+                    <p>1-1.아픈게 싫으시면 포비돈, 일명 빨간 약으로 내용을 작성해주시면 됩니다. 
+                        아무도 모르고 관심도 없습니다. 어차피 손가락을 물려고 하셨던 분들은 필요했었던 물품이기에, 서로 이득이라고
+                        생각합시다.
+                    </p>
+                </div>
+            </div>
+            <div class="menu">
+                <div class="img__container">
+                    <div class="ballon__img"></div>
+                </div>
+                <div class="menu__warpper">
+                    <p>2.보급받은 이벤트용 풍선(소)를 양껏 준비해줍니다. 여태껏 여러분들의
+                        마음의 편지가 전달되지 않은 것은 형식에 온힘을 다하지 않았기 때문입니다.
+                        혹여나 보급받지 못하셨거나, 분실하신 분들은 <a href="https://www.instagram.com/deep__lee/">여기를</a> 클릭해주십시오.
+                    </p>
+                </div>
+            </div>
+            <div class="menu">
+                <div class="img__container">
+                    <div class="candle__img"></div>
+                </div>
+                <div class="menu__warpper">
+                    <p>3.유엔양초를 준비해주십시오. 역시 형식을 좀 가꾼다고 한다면, 양초는
+                        무조건 필요하지 않겠습니까. 다른 이벤트용 촛불을 사용하셔도 좋지만,
+                        제조원 이름부터가 국민양초인데 이를 놓치기는 참 아쉽지 않겠습니까.
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
